# courses

./: README.md
Unlocking WinDbg/: setup_vm.ps1
unlocking_c23/template/: CMakeLists.txt  main.c
unlocking_c23/template/headers/: require.h
unlocking_c23/video_2/: main.c
